--- a/index.html
+++ b/index.html
@@ -13,8 +13,20 @@
 
       <link  rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"/>
       <link rel="stylesheet" href="styles.css">
-    <title>Frontend Mentor | Social proof section</title>
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap" rel="stylesheet">
 
+    <title>Frontend Mentor | Social proof section</title>
+    <style>
+      .attribution {
+        margin-bottom: -50px;
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
   </head>
   <body>
     
