--- a/index.html
+++ b/index.html
@@ -29,7 +29,31 @@
     </style>
   </head>
   <body>
-    
+    <main>
+
+      <div class="top-background">
+        <img src="images/bg-pattern-top-desktop.svg" alt="">
+      </div>
+      <div class="bottom-background">
+        <img src="images/bg-pattern-bottom-desktop.svg" alt="">
+      </div>
+      <div class="title">
+        <h1>10,000+ of our users love our products.</h1>
+        We only provide great products combined with excellent customer service.
+        See what our satisfied customers are saying about our services.
+      </div>
+
+      <div class="reviews">
+        <div class="review-card card1">
+          <div class="stars">
+            <img class="star" src="images/icon-star.svg" alt="">
+            <img class="star" src="images/icon-star.svg" alt="">
+            <img class="star" src="images/icon-star.svg" alt="">
+            <img class="star" src="images/icon-star.svg" alt="">
+            <img class="star" src="images/icon-star.svg" alt="">
+          </div>
+          <h3>  Rated 5 Stars in Reviews</h3>
+        </div>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
