--- a/index.html
+++ b/index.html
@@ -54,6 +54,43 @@
           </div>
           <h3>  Rated 5 Stars in Reviews</h3>
         </div>
+        <div class="review-card card2">
+          <div class="stars">
+            <img class="star" src="images/icon-star.svg" alt="">
+            <img class="star" src="images/icon-star.svg" alt="">
+            <img class="star" src="images/icon-star.svg" alt="">
+            <img class="star" src="images/icon-star.svg" alt="">
+            <img class="star" src="images/icon-star.svg" alt="">
+          </div>
+          <h3>  Rated 5 Stars in Report Guru</h3>
+        </div>
+        <div class="review-card card3">
+          <div class="stars">
+            <img class="star" src="images/icon-star.svg" alt="">
+            <img class="star" src="images/icon-star.svg" alt="">
+            <img class="star" src="images/icon-star.svg" alt="">
+            <img class="star" src="images/icon-star.svg" alt="">
+            <img class="star" src="images/icon-star.svg" alt="">
+          </div>
+          <h3>  Rated 5 Stars in BestTech </h3>
+        </div>
+    </div>
+
+  </main>
+  <div class="testimonials">
+    <div class="customer1">
+      <div class="main-info">
+        <div class="img-user">
+          <img src="images/image-colton.jpg" alt="">
+        </div>
+        <div class="name">
+          <div class="user-name">
+          Colton Smith
+          </div>
+          <div class="user-verified">
+            Verified Buyer
+          </div>
+        </div>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
