--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
             Verified Buyer
           </div>
         </div>
+      </div>
+      <div class="comments">
+        "We needed the same printed design as the one we had ordered a week prior.
+        Not only did they find the original order, but we also received it in time.
+        Excellent!"
+      </div>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
