--- a/index.html
+++ b/index.html
@@ -97,6 +97,50 @@
         Not only did they find the original order, but we also received it in time.
         Excellent!"
       </div>
+    </div>
+    <div class="customer2">
+      <div class="main-info">
+        <div class="img-user">
+          <img src="images/image-irene.jpg" alt="">
+        </div>
+        <div class="name">
+          <div class="user-name">
+          Irene Roberts
+          </div>
+          <div class="user-verified">
+            Verified Buyer
+          </div>
+        </div>
+
+      </div>
+      <div class="comments">
+        "Customer service is always excellent and very quick turn around. Completely
+        delighted with the simplicity of the purchase and the speed of delivery."
+      </div>
+
+    </div>
+    <div class="customer3">
+      <div class="main-info">
+        <div class="img-user">
+          <img src="images/image-anne.jpg" alt="">
+        </div>
+        <div class="name">
+          <div class="user-name">
+          Anne Wallace
+          </div>
+          <div class="user-verified">
+            Verified Buyer
+          </div>
+        </div>
+
+      </div>
+      <div class="comments">
+        "Put an order with this company and can only praise them for the very high
+        standard. Will definitely use them again and recommend them to everyone!"
+      </div>
+
+    </div>
+  </div>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
